# pyweb-hw-09

./: .gitignore  README.md  pyproject.toml
src/: authors.json  main.py  scrapyscript_view.py
src-hw-08/: consumer_email.py  consumer_sms.py  main.py  models.py  producer.py  seed.py
test_spyder/: result.csv
test_spyder/test_spyder/: settings.py
test_spyder/test_spyder/spiders/: authors.py
