[tool.poetry]
name = "pyweb-hw-09"
version = "0.1.0"
description = ""
authors = ["Spica12 <vitaly.savenko12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.0"
pytest = "^7.4.3"
scrapyscript = "^1.1.5"
mongoengine = "^0.27.0"
pika = "^1.3.2"
faker = "^21.0.0"
redis = "^5.0.1"
redis-lru = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
